# oblikuestrategies

./: CMakeLists.txt  Messages.sh  PKGBUILD  README  README.md  create_archive.sh  install.sh  oblikue-strategies-1.0.tar.xz  oblikue-strategies-1.1.tar.xz  oblikue-strategies-1.2.tar.xz  oblikue-strategies-1.3.tar.xz  oblikue-strategies-1.4.tar.xz  oblikue-strategies-1.5.tar.xz  oblikue-strategies.cpp  oblikue-strategies.h  plasma-applet-oblikue-strategies.desktop
sources/: CMakeLists.txt  configwindow.ui  oblikue-strategies.cpp  oblikue-strategies.h  plasma-applet-oblikue-strategies.desktop  plasma_applet_oblikue-strategies.notifyrc
src/: CMakeLists.txt  oblikue-strategies.h  plasma-applet-oblikue-strategies.desktop
text/: 1st_edition.txt  2nd_edition.txt  3rd_edition.txt
